--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: devlopr
-subtitle: A Portfolio Jekyll Theme Built for Developers
+title: Hector Robles
+subtitle: This is my online CV and personal blog :)
 description: >- # this means to ignore newlines until "baseurl:"
   devlopr-jekyll is a beautiful Jekyll Theme Built For Developers, which is optimized for speed and readability.
 
@@ -8,95 +8,119 @@ baseurl: "" # the subpath of your site, e.g. /blog
 
 # Navigation
 urls:
-    - text: Home
-      url: /
-    - text: About
-      url: /about
-    - text: Blog
-      url: /blog
-    - text: Gallery
-      url: /gallery
-    - text: Shop
-      url : /shop
-    - text: Contact
-      url : /contact
-    - text: Styleguide
-      url: /styleguide
-    - text: Get Started
-      url: /get-started
+  - text: Home
+    url: /
+  - text: About
+    url: /about
+  - text: Blog
+    url: /blog
+  - text: Gallery
+    url: /gallery
+  - text: Shop
+    url : /shop
+  - text: Contact
+    url : /contact
+  - text: Styleguide
+    url: /styleguide
+  - text: Get Started
+    url: /get-started
 
 # Edit Author details (For multi authors check _data/authors.yml)
 
-author_logo: profile.png
-author: John Doe
-author_bio: Hi, my name is John Doe. I built this site using devlopr-jekyll :D
-author_email: "mail@sujaykundu.com"
-author_location: India
-author_website_url: "https://sujaykundu.com"
-typewrite-text: devlopr is a jekyll theme built for developers. You can edit this in _config.yml file
+author_logo: yo.png
+author: Héctor Robles
+author_bio: Hi, my name is Héctor Robles. I built this site using devlopr-jekyll, I love 🐍python🐍 programming, 👁OpenCV👁 development and teach others :D
+author_email: "robletes062901@gmail.com"
+author_location: Mexico
+author_website_url: "https://github.com/Hector290601"
+typewrite-text: I´m a Computer Engineering student, web and desktop developer :)
 
 # Experiences
 author_work_experiences:
-            - company_name: Google
-              company_logo: google.png
-              company_url: https://google.com
-              designation: Software Engineer
-              description: Worked on various Google Products
-              visibility: true
-            - company_name: Microsoft
-              company_logo: microsoft.png
-              company_url: https://microsoft.com
-              designation: Azure Developer
-              description: Worked on various Azure Cloud Products
-              visibility: true
+  - company_name: Colegio de Ciencias y Humanidades Plantel Sur, UNAM
+    company_logo: CCHS.png
+    company_url: https://www.cch-sur.unam.mx/
+    designation: Teacher
+    description: Planificación de clases -Profesor de cursos intensivos -Observación y evaluación de cada uno de los alumnos -Facilidad comunicativa y entendimiento con los alumnos.
+    visibility: true
+  - company_name: Colegio de Ciencias y Humanidades Plantel Sur, UNAM
+    company_logo: CCHS.png
+    company_url: https://www.cch-sur.unam.mx/
+    designation: student advisor
+    description: Planificación de clases -Profesor de cursos intensivos -Observación y evaluación de cada uno de los alumnos -Facilidad comunicativa y entendimiento con los alumnos.
+    visibility: true
+  - company_name: Tribunal de Justicia Administrativa de la ciudad de México
+    company_logo: tjacdmx.png
+    company_url: https://www.tjacdmx.gob.mx/
+    designation: Programming intern
+    description: Web developer.
+    visibility: true
+  - company_name: Tribunal de Justicia Administrativa de la ciudad de México
+    company_logo: tjacdmx.png
+    company_url: https://www.tjacdmx.gob.mx/
+    designation: Technical support intern
+    description: Assembly and repair of microcomputer equipment, expansion of computer equipment.
+    visibility: true
 
 # Education
 author_education_details:
-              - college_logo: mit.png
-                college_name: MIT
-                college_url: https://mit.org
-                college_degree: CS Engineer
-                description: Bachelor of Technology
-                visibility: true
+  - college_logo: unam.png
+    college_name: UNAM
+    college_url: https://www.unam.mx/
+    college_degree: Computer Engineering Student
+    description: Currently studying computer engineering :)
+    visibility: true
+  - college_logo: unam.png
+    college_name: UNAM
+    college_url: https://www.unam.mx/
+    college_degree: Computer systems, software development
+    description: TSU
+    visibility: true
+  - college_logo: unam.png
+    college_name: UNAM
+    college_url: https://www.unam.mx/
+    college_degree: Maintenance of microcomputing systems
+    description: TSU
+    visibility: true
 
 # Projects
-author_project_details:
-              - project_thumbnail: gamershub.png
-                project_title: Gamers Hub
-                project_description: A Platform built for Gamers and Game Devs
-                project_url: https://gamershub.in
-                visibility: true
-              - project_thumbnail: hack4r.PNG
-                project_title: Hack4r
-                project_description: A Platform built for Hackers and Penetration Testers
-                project_url: https://hack4r.com
-                visibility: true
+#author_project_details:
+#              - project_thumbnail: gamershub.png
+#                project_title: Gamers Hub
+#                project_description: A Platform built for Gamers and Game Devs
+#                project_url: https://gamershub.in
+#                visibility: false
+#              - project_thumbnail: hack4r.PNG
+#                project_title: Hack4r
+#                project_description: A Platform built for Hackers and Penetration Testers
+#                project_url: https://hack4r.com
+#                visibility: false
 
 # social links
-twitter_username: johndoe
-github_username:  sujaykundu777
-facebook_username: johndoe
-linkedin_username: johndoe
-behance_username: johndoe
-instagram_username: johndoe
-medium_username: johndoe
-telegram_username: johndoe
-dribbble_username: johndoe
-flickr_username: johndoe
+twitter_username: Robletes06290
+github_username:  Hector290601
+facebook_username: hector290601
+linkedin_username: héctor-robles-8a94341ba
+behance_username: Robletes0629
+instagram_username: hector.robletes.062901
+medium_username: robletes062901
+telegram_username: Hector290601
+dribbble_username: Hector290601
+flickr_username: robletes062901
 
 #for comments ( we got Disqus and Hyvor Commenting, uncomment the one you want to use )
 
 # disqus_shortname: sujay-kundu
-hyvor_talk_website_id: 476
+hyvor_talk_website_id: 4018
 
 # wakatime username (coding activity)
-wakatime_username: sujaykundu777
+wakatime_username: Hector290601
 
 # mailchimp embedded form url (newsletter):
-mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
+mailchimp_form_url:  https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
 
 # formspree (contact form)
-formspree_email: johndoe@gmail.com
+formspree_email: robletes062901@gmail.com
 
 # syntax highlighter
 markdown: kramdown
